style.css
/* poppins-200 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 200;
  src: url('../fonts/poppins-v23-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* poppins-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/poppins-v23-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* poppins-600 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  src: url('../fonts/poppins-v23-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

:root {
  --clr-red: hsl(0, 78%, 62%);
  --clr-cyan: hsl(180, 62%, 55%);
  --clr-orange: hsl(34, 97%, 64%);
  --clr-blue: hsl(212, 86%, 64%);

  --clr-grey-500: hsl(234, 12%, 34%);
  --clr-grey-400: hsl(212, 6%, 44%);
  --clr-white: hsl(0, 0%, 100%);
}

.container {
  margin: 20px;
}

.card-grid {
  display: grid;
  gap: 1.5rem;
  margin-top: 80px;
}

body {
  font-size: 15px;
  font-family: 'Poppins', sans-serif;
  color: var(--clr-grey-500);
}

h1 {
  font-weight: 200;
  margin-top: 50px;
  text-align: center;
}

header p {
  text-align: center;
}

.heading-bold-text {
  font-weight: 600;
  color: var(--clr-grey-500);
}

.supervisor,
.team-builder,
.karma,
.calculator {
  display: flex;
  flex-direction: column;
  box-shadow: 1px 1px 5px var(--clr-grey-400);
  border-radius: 5px;
  padding: 25px;
}

.supervisor h2,
.team-builder h2,
.karma h2,
.calculator h2 {
  margin: 0;
}

.supervisor p,
.team-builder p,
.karma p,
.calculator p {
  margin: 0;
}

.supervisor img,
.team-builder img,
.karma img,
.calculator img {
  width: 50px;
  align-self: flex-end;
}

.supervisor {
  border-top: 2px solid var(--clr-cyan);
}

.team-builder {
  border-top: 2px solid var(--clr-red);
}
.karma {
  border-top: 2px solid var(--clr-orange);
}
.calculator {
  border-top: 2px solid var(--clr-blue);
}

@media only screen and (min-width: 768px) {
  .supervisor {
    grid-column: span 2;
    margin: 0 auto;
    width: 50%;
  }

  .calculator {
    grid-column: span 2;
    margin: 0 auto;
    width: 50%;
  }

  header {
    width: 540px;
    /* text-align: center; */
    margin: 0 auto;
  }
}

@media only screen and (min-width: 1024px) {
  .card-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto 160px auto;
    gap: 1.5rem;
    align-items: start;
  }

  .supervisor,
  .team-builder,
  .karma,
  .calculator {
    width: 350px;
    height: 250px;
    padding: 25px 25px 90px;
  }

  .supervisor img,
  .team-builder img,
  .karma img,
  .calculator img {
    padding-top: 50px;
    height: 64px;
    width: 64px;
  }

  .supervisor,
  .calculator {
    /* width: auto;
    margin: 0; */
  }

  .team-builder {
    grid-column: 2;
    grid-row: 1;
  }

  .supervisor {
    grid-column: 1;
    grid-row: 2;
    align-self: center;
    transform: translateY(-50%);
    z-index: 1;
  }

  .calculator {
    grid-column: 3;
    grid-row: 2;
    align-self: center;
    transform: translateY(-50%);
    z-index: 1;
  }

  .karma {
    grid-column: 2;
  }
}

